# om.learn.render

./: .gitignore  CMakeLists.txt  GenerateProjectFiles.bat  ReadMe.md
include/glad/: glad.h
include/glm/detail/: setup.hpp
shaders/: soft_render.vs
src/: Camera.h  Texture.h  XCamera.cpp  XCamera.h  XCommon.h  XData.cpp  XData.h  XFrameBuffer.h  XGameObject.cpp  XGameObject.h  XLight.h  XMesh.cpp  XMesh.h  XSoftRender.cpp  XSoftRender.h  XUtils.cpp  XUtils.h  glad.c  main.cpp  shader.h
